--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <a href="./paginas/servicios.html">
-                    <img src="./img/bg-carousel-clases.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/bg-carousel-clases.jpg" class="d-block w-100" alt="Clases de mtb">
                 </a>
                 <div class="carousel-caption d-none d-md-block">
                     <h3>CLASES DE MTB</h3>
@@ -70,7 +70,7 @@
               </div>
               <div class="carousel-item">
                 <a href="./paginas/servicios.html">
-                    <img src="./img/bg-carousel-mantencion.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/bg-carousel-mantencion.jpg" class="d-block w-100" alt="Mantencion de bicicleta">
                 </a>
                 <div class="carousel-caption d-none d-md-block">
                     <h3>MANTENCIONES</h3>
@@ -79,7 +79,7 @@
               </div>
               <div class="carousel-item">
                 <a href="./paginas/servicios.html">
-                    <img src="./img/bg-carousel-pintura.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/bg-carousel-pintura.jpg" class="d-block w-100" alt="Pintura de bicicleta">
                 </a>
                 <div class="carousel-caption d-none d-md-block">
                     <h3>PINTURA</h3>
@@ -106,19 +106,19 @@
             <div class=logo-marcas>
                 <ul>
                     <a href="./paginas/productos.html">
-                        <img src="./img/brands/bell.png" alt="bell-helmets">
+                        <img src="./img/brands/bell.png" alt="bell-helmets logo">
                     </a>
                     <a href="./paginas/productos.html"> 
-                        <img src="./img/brands/fox.png" alt="fox-race"> 
+                        <img src="./img/brands/fox.png" alt="fox-race logo"> 
                     </a> 
                     <a href="./paginas/productos.html">
-                        <img src="./img/brands/michelin.png" alt="michelin"> 
+                        <img src="./img/brands/michelin.png" alt="michelin logo"> 
                     </a>
                     <a href="./paginas/productos.html">
-                        <img src="./img/brands/santacruz.png" alt="santacruz"> 
+                        <img src="./img/brands/santacruz.png" alt="santacruz logo"> 
                     </a> 
                     <a href="./paginas/productos.html">
-                        <img src="./img/brands/shimano.png" alt="shimano"> 
+                        <img src="./img/brands/shimano.png" alt="shimano logo"> 
                     </a>        
                     <a href="./paginas/productos.html">
                         <img src="./img/brands/sram.png" alt="sram logo"> 
