--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -49,16 +49,16 @@
              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/Blog/blog-header-1.jpg" class="d-block w-100" alt="...">
+                    <img src="../img/Blog/blog-header-1.jpg" class="d-block w-100" alt="Foto carrera salto piedra">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/Blog/blog-header-2.jpg" class="d-block w-100" alt="...">
+                    <img src="../img/Blog/blog-header-2.jpg" class="d-block w-100" alt="Foto Carrera salto largo">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/Blog/blog-header-3.jpg" class="d-block w-100" alt="...">
+                    <img src="../img/Blog/blog-header-3.jpg" class="d-block w-100" alt="Foto Carrera seccion alta">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/Blog/blog-header-4.jpg" class="d-block w-100" alt="...">
+                    <img src="../img/Blog/blog-header-4.jpg" class="d-block w-100" alt="Foto Carrera seccion baja">
                   </div>
                 </div>
                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
