arreglo ruta imagenes productos

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -59,7 +59,7 @@
             <div class="product-card">
                 <div class="badge">Oferta</div>
                 <div class="product-tumb">
-                    <img src="/img/productos/casco.jpg" alt="casco bicicleta">
+                    <img src="../img/productos/casco.jpg" alt="casco bicicleta">
                 </div>
                 <div class="product-details">
                     <span class="product-catagory">Enduro,cascos</span>
@@ -77,7 +77,7 @@
             <div class="product-card">
                 <div class="badge">Oferta</div>
                 <div class="product-tumb">
-                    <img src="/img/productos/pedales.png" alt="pedales bicicleta">
+                    <img src="../img/productos/pedales.png" alt="pedales bicicleta">
                 </div>
                 <div class="product-details">
                     <span class="product-catagory">Mtb,pedales</span>
@@ -95,7 +95,7 @@
             <div class="product-card">
                 <div class="badge">Oferta</div>
                 <div class="product-tumb">
-                    <img src="/img/productos/piñon.png" alt="piñon bicicleta">
+                    <img src="../img/productos/piñon.png" alt="piñon bicicleta">
                 </div>
                 <div class="product-details">
                     <span class="product-catagory">Mtb,transmisión</span>
@@ -113,7 +113,7 @@
             <div class="product-card">
                 <div class="badge">Oferta</div>
                 <div class="product-tumb">
-                    <img src="/img/productos/cadena.png" alt="cadena bicicleta">
+                    <img src="../img/productos/cadena.png" alt="cadena bicicleta">
                 </div>
                 <div class="product-details">
                     <span class="product-catagory">Mtb,cadenas</span>
@@ -131,7 +131,7 @@
             <div class="product-card">
                 <div class="badge">Más Vendido</div>
                 <div class="product-tumb">
-                    <img src="/img/productos/guantes.png" alt="guantes bicicleta">
+                    <img src="../img/productos/guantes.png" alt="guantes bicicleta">
                 </div>
                 <div class="product-details">
                     <span class="product-catagory">Indumentaria,guantes</span>
@@ -149,7 +149,7 @@
             <div class="product-card">
                 <div class="badge">Más Vendido</div>
                 <div class="product-tumb">
-                    <img src="/img/productos/maza.png" alt="maza bicicleta">
+                    <img src="../img/productos/maza.png" alt="maza bicicleta">
                 </div>
                 <div class="product-details">
                     <span class="product-catagory">Mtb,ruedas</span>
@@ -167,7 +167,7 @@
             <div class="product-card">
                 <div class="badge">Más Vendido</div>
                 <div class="product-tumb">
-                    <img src="/img/productos/tee.png" alt="tee bicicleta">
+                    <img src="../img/productos/tee.png" alt="tee bicicleta">
                 </div>
                 <div class="product-details">
                     <span class="product-catagory">Mtb,componentes</span>
@@ -185,7 +185,7 @@
             <div class="product-card">
                 <div class="badge">Más Vendido</div>
                 <div class="product-tumb">
-                    <img src="/img/productos/zapatillas.png" alt="zapatillas bicicleta">
+                    <img src="../img/productos/zapatillas.png" alt="zapatillas bicicleta">
                 </div>
                 <div class="product-details">
                     <span class="product-catagory">Mtb,Indumentaria</span>
