--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top shadow-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="Logo de Fixbike"></a>
           <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -206,35 +206,102 @@
     <!-- termina main -->
 
     <!-- inicia footer -->
-    <footer class="footer-07">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-12 text-center">
-                    <h2>Siguenos en nuestras redes</h2>
-                    <p class="menu">
-                     <a href="../index.html">Inicio</a>
-                     <a href="./paginas/productos.html">Productos</a>
-                     <a href="./paginas/servicios.html">Servicios</a>
-                     <a href="./blog.html">Blog</a>
-                     <a href="./contacto.html">Contacto</a>
-                    </p>
-                    <ul class="social-icons">
-                        <li>
-                         <a href="https://www.instagram.com/fixbike/"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li>
-                         <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a>
-                     </li>
-                        <li>
-                         <a href="https://www.facebook.com/FixBikeTalca"><i class="fab fa-facebook"></i></a>
-                        </li>
-                        <li>
-                         <a href="https://www.whatsapp.com/?lang=es"><i class="fab fa-whatsapp"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+<footer>
+    <div class="container mt-5">
+        <div class="row">
+        <div class="col-md-4 footer-column">
+            <ul class="nav flex-column">
+            <li class="nav-item">
+                <span class="footer-title">Productos y Servicios</span>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./productos.html">Ofertas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./productos.html">Mas Vendidos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./servicios.html">Pintura</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./servicios.html">Restauraciones</a>
+            </li>
+            </ul>
         </div>
+        <div class="col-md-4 footer-column">
+            <ul class="nav flex-column">
+            <li class="nav-item">
+                <span class="footer-title">Nuestra Empresa</span>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Misión</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./blog.html">Noticias y Artículos</a>
+            </li>
+            </ul>
+        </div>
+        <div class="col-md-4 footer-column">
+            <ul class="nav flex-column">
+            <li class="nav-item">
+                <span class="footer-title">Contacto & Soporte</span>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contacto.html"><i class="fas fa-phone"></i>+56998765432</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contacto.html"><i class="fas fa-comments"></i>Chatea con nosotros</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contacto.html"><i class="fas fa-envelope"></i>Contacto</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contacto.html"><i class="fas fa-star"></i>Danos tu Feedback</a>
+            </li>
+            </ul>
+        </div>
+        </div>
+    
+        <div class="text-center"><i class="fas fa-ellipsis-h"></i></div>
+        
+        <div class="row text-center">
+        <div class="col-md-4 box">
+            <span class="copyright quick-links">Copyright &copy; FIXBIKE 2022</span>
+        </div>
+        <div class="col-md-4 box">
+            <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+                <a href="https://twitter.com/?lang=es">
+                <i class="fab fa-twitter"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="https://www.facebook.com/FixBikeTalca">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="https://www.instagram.com/fixbike/">
+                <i class="fab fa-instagram"></i>
+            </a>
+            </li>
+            </ul>
+        </div>
+        <div class="col-md-4 box">
+            <ul class="list-inline quick-links">
+            <li class="list-inline-item">
+                <a href="./contacto.html">Politicas de Privacidad</a>
+            </li>
+            <li class="list-inline-item">
+                <a href="./contacto.html">Terminos de Uso</a>
+            </li>
+            </ul>
+        </div>
+        </div>
+    </div>
     </footer>
     <!-- termina footer -->
     <script src="https://kit.fontawesome.com/2764f6c755.js" crossorigin="anonymous"></script> 
