--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top shadow-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="Logo de Fixbike"></a>
           <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam ab aspernatur, voluptas ullam error ad.</p>
                 </div> 
                 <div class="iframe">
-                    <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FFixBikeTalca%2Fvideos%2F654871034852603%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/L0QGsXKZE4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <h4>CLASES DE MTB</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam ab aspernatur, voluptas ullam error ad.</p>
 
@@ -82,36 +82,103 @@
     <!-- termina main -->
 
     <!-- inicia footer -->
-    <footer class="footer-07">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-12 text-center">
-                    <h2>Siguenos en nuestras redes</h2>
-                    <p class="menu">
-                     <a href="../index.html">Inicio</a>
-                     <a href="./productos.html">Productos</a>
-                     <a href="./servicios.html">Servicios</a>
-                     <a href="./blog.html">Blog</a>
-                     <a href="./contacto.html">Contacto</a>
-                    </p>
-                    <ul class="social-icons">
-                        <li>
-                         <a href="https://www.instagram.com/fixbike/"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li>
-                         <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i></a>
-                     </li>
-                        <li>
-                         <a href="https://www.facebook.com/FixBikeTalca"><i class="fab fa-facebook"></i></a>
-                        </li>
-                        <li>
-                         <a href="https://www.whatsapp.com/?lang=es"><i class="fab fa-whatsapp"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+  <footer>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-4 footer-column">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <span class="footer-title">Productos y Servicios</span>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./productos.html">Ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./productos.html">Mas Vendidos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./servicios.html">Pintura</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./servicios.html">Restauraciones</a>
+            </li>
+          </ul>
         </div>
-    </footer>
+        <div class="col-md-4 footer-column">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <span class="footer-title">Nuestra Empresa</span>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Misión</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./blog.html">Noticias y Artículos</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 footer-column">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <span class="footer-title">Contacto & Soporte</span>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html"><i class="fas fa-phone"></i>+56998765432</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html"><i class="fas fa-comments"></i>Chatea con nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html"><i class="fas fa-envelope"></i>Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html"><i class="fas fa-star"></i>Danos tu Feedback</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  
+      <div class="text-center"><i class="fas fa-ellipsis-h"></i></div>
+      
+      <div class="row text-center">
+        <div class="col-md-4 box">
+          <span class="copyright quick-links">Copyright &copy; FIXBIKE 2022</span>
+        </div>
+        <div class="col-md-4 box">
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="https://twitter.com/?lang=es">
+              <i class="fab fa-twitter"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/FixBikeTalca">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/fixbike/">
+              <i class="fab fa-instagram"></i>
+            </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 box">
+          <ul class="list-inline quick-links">
+            <li class="list-inline-item">
+              <a href="./contacto.html">Politicas de Privacidad</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="./contacto.html">Terminos de Uso</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
     <!-- termina footer -->
     <script src="https://kit.fontawesome.com/2764f6c755.js" crossorigin="anonymous"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
