--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIXBIKE</title>
+    <link rel="shorcut icon" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -46,7 +47,7 @@
         <div class="p-5 text-center bg-image rounded-3 w-100" style="background-image: url('../img/heroproductos.jpg');height: 400px;">
           <div class="mask w-100 h-100" style="background-color: rgba(0, 0, 0, 0.6);">
             <div class="d-flex justify-content-center align-items-center h-100">
-              <div class="text-white">
+              <div>
               <h1 class="mb-3">LOS MEJORES PRODUCTOS Y MARCAS</h1>
             </div>
           </div>
