--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       </div>
     </section>
   <footer>
-    <div class="container mt-5">
+    <div class="container mt-5 shadows rounded-5 p-5">
       <div class="row">
         <div class="col-md-4 footer-column">
           <ul class="nav flex-column">
