seo + optimizacion imagenes

--- a/index.html
+++ b/index.html
@@ -4,59 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Reparaciones , mantenciones y cursos de bicletas">
-    <title>FIXBIKE</title>
+    <meta name="description" content="reparaciones , mantenciones y cursos de bicletas">
+    <meta name="keywords" content="taller, mtb, reparaciones, enduro, dh,">
+    <title>FIXBIKE | INICIO</title>
     <link rel="shorcut icon" href="./img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top shadow-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" alt="Logo de Fixbike"></a>
-          <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="toggler-icon top-bar"></span>
-            <span class="toggler-icon middle-bar"></span>
-            <span class="toggler-icon bottom-bar"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./index.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./paginas/productos.html">PRODUCTOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./paginas/servicios.html">SERVICIOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./paginas/blog.html">BLOG</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./paginas/contacto.html">CONTACTO</a>
-              </li>
-             </ul>
-          </div>
+  <nav class="navbar navbar-expand-lg fixed-top shadow-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" alt="Logo de Fixbike"></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./paginas/productos.html">PRODUCTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./paginas/servicios.html">SERVICIOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./paginas/blog.html">BLOG</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./paginas/contacto.html">CONTACTO</a>
+            </li>
+            </ul>
         </div>
-    </nav>
-    <header class="header">
-        <div class="container col-xxl-8 px-4 py-5">
-            <div class="row flex-lg-row align-items-center g-5 py-5">
-              <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">DE CICLISTAS PARA CICLISTAS</h1>
-                <p class="lead">APASIONADOS POR LAS BICIS DESDE LOS 80'S. 
-                    FUNDADOS EN 2015 FIXBIKE, NUESTRO OBJETIVO ES BRINDAR UNA ATENCION INTEGRAL AL CICLISTA.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">CONTACTANOS
-                    <a href="/paginas/contacto.html"></a>
-                  </button>
-                </div>
+      </div>
+  </nav>
+  <header class="header">
+      <div class="container col-xxl-8 px-4 py-5">
+          <div class="row flex-lg-row align-items-center g-5 py-5">
+            <div class="col-lg-6">
+              <h1 class="display-5 fw-bold lh-1 mb-3">DE CICLISTAS PARA CICLISTAS</h1>
+              <p class="lead">APASIONADOS POR LAS BICIS DESDE LOS 80'S. 
+                  FUNDADOS EN 2015 FIXBIKE, NUESTRO OBJETIVO ES BRINDAR UNA ATENCION INTEGRAL AL CICLISTA.</p>
+              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">CONTACTANOS
+                  <a href="./paginas/contacto.html"></a>
+                </button>
               </div>
             </div>
           </div>
-    </header>
-    <section class="servicios">
+        </div>
+  </header>
+  <main>
+    <section class="servicios m-5">
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -64,7 +66,7 @@
                     <img src="./img/bg-carousel-clases.jpg" class="d-block w-100" alt="Clases de mtb">
                 </a>
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>CLASES DE MTB</h3>
+                    <h2>CLASES DE MTB</h2>
                     <p>Atrevete a iniciar en el Mtb con clases practicas y buena onda.</p>
                 </div>
               </div>
@@ -73,7 +75,7 @@
                     <img src="./img/bg-carousel-mantencion.jpg" class="d-block w-100" alt="Mantencion de bicicleta">
                 </a>
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>MANTENCIONES</h3>
+                    <h2>MANTENCIONES</h2>
                     <p>Reparamos y hacemos servicio a cualquier tipo de bicicleta.</p>
                 </div>
               </div>
@@ -82,7 +84,7 @@
                     <img src="./img/bg-carousel-pintura.jpg" class="d-block w-100" alt="Pintura de bicicleta">
                 </a>
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>PINTURA</h3>
+                    <h2>PINTURA</h2>
                     <p>¿Nuevo diseño? Consulta por nuestros servicios de pintura.</p>
                 </div>
               </div>
@@ -97,8 +99,7 @@
             </button>
           </div>
     </section>
-    <section>
-    <section class="marcas">
+    <section class="marcas mt-5">
         <div>
           <h3>MARCAS CON LAS QUE TRABAJAMOS</h3>
           <p>EN FIXBIKE TRABAJAMOS CON LAS MEJORES MARCAS PARA ENTREGAR LO QUE NECESITES.</p>
@@ -115,21 +116,21 @@
               <div class="col col-sm-6 col-xl-3 p-3">
                   <div class="shadows rounded-5 text-center">
                       <a href="./paginas/productos.html"> 
-                          <img src="./img/brands/fox.png" alt="fox-race logo"> 
-                      </a>>
+                          <img src="./img/brands/fox.png" alt="fox-race logo negro"> 
+                      </a>
                   </div>
               </div>
               <div class="col col-sm-6 col-xl-3 p-3">
                   <div class="shadows rounded-5 text-center">
                       <a href="./paginas/productos.html">
-                          <img src="./img/brands/michelin.png" alt="michelin logo"> 
+                          <img src="./img/brands/michelin.png" alt="michelin logo negro"> 
                       </a>
                   </div>
               </div>
               <div class="col col-sm-6 col-xl-3 p-3 ">
                   <div class="shadows rounded-5 text-center">
                       <a href="./paginas/productos.html">
-                          <img src="./img/brands/santacruz.png" alt="santacruz logo"> 
+                          <img src="./img/brands/santacruz.png" alt="santacruz logo negro"> 
                       </a>
                   </div>
               </div>
@@ -138,34 +139,35 @@
               <div class="col col-sm-6 col-xl-3 p-3">
                   <div class="shadows rounded-5 text-center">
                       <a href="./paginas/productos.html">
-                          <img src="./img/brands/shimano.png" alt="shimano logo"> 
+                          <img src="./img/brands/shimano.png" alt="shimano logo negro"> 
                       </a>
                   </div>
               </div>
               <div class="col col-sm-6 col-xl-3 p-3">
                   <div class="shadows rounded-5 text-center">
                       <a href="./paginas/productos.html">
-                          <img src="./img/brands/sram.png" alt="sram logo"> 
+                          <img src="./img/brands/sram.png" alt="sram logo negro"> 
                       </a>
                   </div>
               </div>
               <div class="col col-sm-6 col-xl-3 p-3">
                   <div class="shadows rounded-5 text-center">
                       <a href="./paginas/productos.html">
-                          <img src="./img/brands/yeti.png" alt="yeti logo"> 
+                          <img src="./img/brands/yeti.png" alt="yeti logo negro"> 
                       </a>
                   </div>
               </div>
               <div class="col col-sm-6 col-xl-3 p-3">
                   <div class="shadows rounded-5 text-center">
                       <a href="./paginas/productos.html">
-                          <img src="./img/brands/rockshox.png" alt="rockshox logo"> 
+                          <img src="./img/brands/rockshox.png" alt="rockshox logo negro"> 
                       </a>>
                   </div>
               </div>
           </div>          
       </div>
     </section>
+  </main>  
   <footer>
     <div class="container mt-5 shadows rounded-5 p-5">
       <div class="row">
@@ -224,9 +226,7 @@
           </ul>
         </div>
       </div>
-  
       <div class="text-center"><i class="fas fa-ellipsis-h"></i></div>
-      
       <div class="row text-center">
         <div class="col-md-4 box">
           <span class="copyright quick-links">Copyright &copy; FIXBIKE 2022</span>
@@ -236,17 +236,17 @@
             <li class="list-inline-item">
               <a href="https://twitter.com/?lang=es">
               <i class="fab fa-twitter"></i>
-            </a>
+              </a>
             </li>
             <li class="list-inline-item">
               <a href="https://www.facebook.com/FixBikeTalca">
               <i class="fab fa-facebook-f"></i>
-            </a>
+              </a>
             </li>
             <li class="list-inline-item">
               <a href="https://www.instagram.com/fixbike/">
               <i class="fab fa-instagram"></i>
-            </a>
+              </a>
             </li>
           </ul>
         </div>
@@ -263,7 +263,7 @@
       </div>
     </div>
   </footer>
-    <script src="https://kit.fontawesome.com/2764f6c755.js" crossorigin="anonymous"></script> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/2764f6c755.js" crossorigin="anonymous"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
