--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -4,48 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIXBIKE</title>
+    <meta name="description" content="Noticias del mtb nacional">
+    <meta name="keywords" content="mtb, enduro, dh, noticias,">
+    <title>FIXBIKE | BLOG</title>
     <link rel="shorcut icon" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top shadow-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="Logo de Fixbike"></a>
-        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="toggler-icon top-bar"></span>
-          <span class="toggler-icon middle-bar"></span>
-          <span class="toggler-icon bottom-bar"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./productos.html">PRODUCTOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./servicios.html">SERVICIOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./blog.html">BLOG</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">CONTACTO</a>
-            </li>
-            </ul>
-        </div>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="Logo de Fixbike"></a>
+      <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="toggler-icon top-bar"></span>
+        <span class="toggler-icon middle-bar"></span>
+        <span class="toggler-icon bottom-bar"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./productos.html">PRODUCTOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./servicios.html">SERVICIOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./blog.html">BLOG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contacto.html">CONTACTO</a>
+          </li>
+          </ul>
       </div>
+    </div>
   </nav>
   <!-- termina nav -->
 
   <!-- inicia header -->
-  <header class="head-products mb-5">
-        
+  <header class="head-products mb-5">    
     <div class="p-5 text-center bg-image rounded-3 w-100" style="background-image: url('../img/heroblog.jpg');height: 400px;">
-      <div class="mask w-100 h-100" style="background-color: rgba(0, 0, 0, 0.6);">
+      <div class="mask w-100 h-100 rounded-5" style="background-color: rgba(0, 0, 0, 0.6);">
         <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white">
           <h1 class="mb-3">TODAS LAS NOTICIAS DEL MTB NACIONAL </h1>
@@ -55,6 +56,7 @@
   </div>
 </header>
 <!-- termina header -->
+<!--inicia aside -->
 <aside>
     <div class="container-flex blog-header shadows rounded-5">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -83,50 +85,62 @@
       </div>
     </div> 
   </aside>
+  <!--termina aside -->
   
-
   <!-- inicia main -->
   <main>
-      <section class="container mt-5 shadows rounded-5 my-5 p-5">
-        <div class="container-fluid p-0 overflow-hidden ">
-          <div class="row g-0">
-            <div lc-helper="background" class="col-lg-6 order-lg-2  " style="min-height: 45vh; background-size: cover; background-position: center; background-image: url(../img/Blog/blog-fechaclaseb.jpg);">
-            </div>
-            <div class="col-lg-6 order-lg-1 my-auto px-5 py-5">
-              <div class="lc-block">
-                <div>
-                  <a href="./blog.html"><h2>SE VIENE FECHA CLASE B EN TALCA</h2></a>
-                  <p class="lead">LLega a la ciudad del trueno una nueva fecha del Tour Nacional. Como es habitual estara a cargo de el club Gravedad Cero, los cuales ya se encuentran afinando detalles en pista.</p>
-                </div>
-              </div>
-            </div>
+    <section class="container mt-5 shadows rounded-5 my-5 p-5">
+      <div class="container-fluid p-0 overflow-hidden ">
+        <div class="row g-0">
+          <div lc-helper="background" class="col-lg-6 order-lg-2  " style="min-height: 45vh; background-size: cover; background-position: center; background-image: url(../img/Blog/blog-fechaclaseb.jpg);">
           </div>
-          <div class="row g-0 ">
-            <div lc-helper="background" class="col-lg-6" style="min-height: 45vh; background-size: cover;background-position: center; background-image: url(../img/Blog/blog-aperturamtbrosario.jpg);">
-            </div>
-            <div class="col-lg-6 my-auto px-5 py-5">
-              <div class="lc-block">
-                <div>
-                  <a href="./blog.html"><h2>MTB ROSARIO ABRE SUS PUERTAS A LA TEMPORADA 2022</h2></a>
-                  <p class="lead">Este 29 de Octubre abre sus puertas el mejor bikepark de la 7ma Región, donde nos sorprenderan con pistas remodeladas y nuevas lineas. Además de toda la entretencion y panoramas que nos ofrece el parque.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row g-0 ">
-            <div lc-helper="background" class="col-lg-6 order-lg-2 " style="min-height: 45vh; background-size: cover; background-position: center; background-image: url(../img/Blog/blog-ridebike.jpg);">
-            </div>
-            <div class="col-lg-6 order-lg-1 my-auto px-5 py-5">
-              <div class="lc-block">
-                <div>
-                  <a href="./blog.html"><h2>PUMONES FASTRACING FINALIZA CON LAS SIGUIENTES POSTALES</h2></a>
-                  <p class="lead">Despues de meses de arduo trabajo de parte del club RideBike Constitución, se logro llevar acabo unas de las fechas mas esperadas del Tour Nacional. Dejando a muchos pilotos felices con la calidad de las pistas y evento.</p>
-                </div>
+          <div class="col-lg-6 order-lg-1 my-auto px-5 py-5">
+            <div class="lc-block">
+              <div>
+                <a href="./blog.html"><h2>SE VIENE FECHA CLASE B EN TALCA</h2></a>
+                <p class="lead">LLega a la ciudad del trueno una nueva fecha del Tour Nacional. Como es habitual estara a cargo de el club Gravedad Cero, los cuales ya se encuentran afinando detalles en pista.</p>
               </div>
             </div>
           </div>
         </div>
-      </section> 
+        <div class="row g-0 ">
+          <div lc-helper="background" class="col-lg-6" style="min-height: 45vh; background-size: cover;background-position: center; background-image: url(../img/Blog/blog-aperturamtbrosario.jpg);">
+          </div>
+          <div class="col-lg-6 my-auto px-5 py-5">
+            <div class="lc-block">
+              <div>
+                <a href="./blog.html"><h2>MTB ROSARIO ABRE SUS PUERTAS A LA TEMPORADA 2022</h2></a>
+                <p class="lead">Este 29 de Octubre abre sus puertas el mejor bikepark de la 7ma Región, donde nos sorprenderan con pistas remodeladas y nuevas lineas. Además de toda la entretencion y panoramas que nos ofrece el parque.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0 ">
+          <div lc-helper="background" class="col-lg-6 order-lg-2 " style="min-height: 45vh; background-size: cover; background-position: center; background-image: url(../img/Blog/blog-ridebike.jpg);">
+          </div>
+          <div class="col-lg-6 order-lg-1 my-auto px-5 py-5">
+            <div class="lc-block">
+              <div>
+                <a href="./blog.html"><h2>PUMONES FASTRACING FINALIZA CON LAS SIGUIENTES POSTALES</h2></a>
+                <p class="lead">Despues de meses de arduo trabajo de parte del club RideBike Constitución, se logro llevar acabo unas de las fechas mas esperadas del Tour Nacional. Dejando a muchos pilotos felices con la calidad de las pistas y evento.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-0 ">
+          <div lc-helper="background" class="col-lg-6" style="min-height: 45vh; background-size: cover; background-position: center; background-image: url(../img/Blog/blog-endurocolbun.jpg);">
+          </div>
+          <div class="col-lg-6 order-lg-1 my-auto px-5 py-5">
+            <div class="lc-block">
+              <div>
+                <a href="./blog.html"><h2>MONTENBAIKENDURO SE PREPARA EN LAGO COLBUN</h2></a>
+                <p class="lead">Cercano a la cordillera se desarrollara esta nueva fecha del Montenbaikenduro Series.La competencia se llevara acabo este 29, 30, 31 de Octubre.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> 
   </main>
   <!-- termina main -->
 
