--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIXBIKE</title>
+    <meta name="description" content="Reparaciones , mantenciones y cursos de bicletas">
+    <meta name="keywords" content="taller, mtb, reparaciones, enduro, dh, contacto">
+    <title>FIXBIKE | CONTACTO</title>
     <link rel="shorcut icon" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
+  <!--inicia nav -->
   <nav class="navbar navbar-expand-lg fixed-top shadow-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt="Logo de Fixbike"></a>
@@ -39,59 +42,59 @@
         </div>
       </div>
   </nav>
+  <!--termica nav -->
+  <!--inicia main -->
   <main>
-    <header class="head-products mb-5">
-        
+    <header class="head-products mb-5"> 
       <div class="p-5 text-center bg-image rounded-3 w-100" style="background-image: url('../img/herocontacto.jpg');height: 400px;">
-        <div class="mask w-100 h-100" style="background-color: rgba(0, 0, 0, 0.6);">
+        <div class="mask w-100 h-100 rounded-5" style="background-color: rgba(0, 0, 0, 0.6);">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
             <h1 class="mb-3">CONTACTANOS</h1>
           </div>
         </div>
       </div>
+    </header>
+    <section>
+      <div class="mt-5 container shadows rounded-5 py-4">
+        <div class="text-center">
+            <h2 class="text-primary">Como podemos ayudarte?</h2>
+            <p class="lead">Escribenos y despeja todas tus dudas</p>
+        </div>
+        <div class=" d-flex align-items-center justify-content-center">
+            <div class="bg-white col-md-4">
+                <div class="p-4 rounded shadow-md">
+                    <div>
+                        <label for="name" class="form-label">Nombre</label>
+                        <input type="text" name="name" class="form-control" placeholder="Nombre" required>
+                    </div>
+                    <div class="mt-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="text" name="email" class="form-control" placeholder="Email" required>
+                    </div class="mt-3">
+                    <div class="mt-3">
+                        <label for="subject" class="form-label">Teléfono</label>
+                        <input type="text" name="subject" class="form-control" placeholder="Teléfono" required>
+                    </div>
+                    <div class="mt-3 mb-3">
+                        <label for="message" class="form-label">Mensaje</label>
+                        <textarea name="message" cols="20" rows="6" class="form-control"
+                            placeholder="Mensaje"></textarea>
+                    </div>
+                    <button class="btn btn-primary">
+                        Enviar
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
-  </header>
-  <section>
-    <div class="mt-5 container shadows rounded-5 py-4">
-      <div class="text-center">
-          <h2 class="text-primary">Como podemos ayudarte?</h2>
-          <p class="lead">Escribenos y despeja todas tus dudas</p>
-      </div>
-      <div class=" d-flex align-items-center justify-content-center">
-          <div class="bg-white col-md-4">
-              <div class="p-4 rounded shadow-md">
-                  <div>
-                      <label for="name" class="form-label">Nombre</label>
-                      <input type="text" name="name" class="form-control" placeholder="Nombre" required>
-                  </div>
-                  <div class="mt-3">
-                      <label for="email" class="form-label">Email</label>
-                      <input type="text" name="email" class="form-control" placeholder="Email" required>
-                  </div class="mt-3">
-                  <div class="mt-3">
-                      <label for="subject" class="form-label">Teléfono</label>
-                      <input type="text" name="subject" class="form-control" placeholder="Teléfono" required>
-                  </div>
-                  <div class="mt-3 mb-3">
-                      <label for="message" class="form-label">Mensaje</label>
-                      <textarea name="message" cols="20" rows="6" class="form-control"
-                          placeholder="Mensaje"></textarea>
-                  </div>
-                  <button class="btn btn-primary">
-                      Enviar
-                  </button>
-              </div>
-          </div>
-      </div>
-  </div>
-  </div> 
-  <div class="container d-flex justify-content-center py-4 w-100 shadows rounded-5 my-5">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13005.48861535937!2d-71.64994!3d-35.42081!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xde2d42e5f249b046!2sFIXBIKE!5e0!3m2!1ses!2scl!4v1667233670776!5m2!1ses!2scl" width="90%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
-  </section>
-  
+    </div> 
+    <div class="container d-flex justify-content-center py-4 w-100 shadows rounded-5 my-5">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13005.48861535937!2d-71.64994!3d-35.42081!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xde2d42e5f249b046!2sFIXBIKE!5e0!3m2!1ses!2scl!4v1667233670776!5m2!1ses!2scl" width="90%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    </section>
   </main>
+  <!--termina main -->
   <!-- inicia footer -->
   <footer>
     <div class="container mt-5 shadows rounded-5 p-5">
